--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-    <script src="https://www.gstatic.com/firebasejs/5.5.0/firebase.js"></script>
+    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/5.5.1/firebase.js"></script>
 </head>
 
 <body>
@@ -26,59 +27,59 @@
 
     <div class="container">
         <div class="row">
-			<div class="col-md-12">
-				<div class="panel panel-default">
-					<div class="panel-heading">
-						<h3 class="panel-title">Current Train Schedule</h3>
-					</div>
-					<div class="panel-body">
-						<div id="content">
-							<table class="table">
-								<thead>
-									<tr>
-										<th>Train Name</th>
-										<th>Destination</th>
-										<th>Frequency (min)</th>
-										<th>Next Arrival</th>
-										<th>Minutes Away</th>
-										<th>Remove</th>
-									</tr>
-								</thead>
-								<tbody id="tableContent">
-								</tbody>
-							</table>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-  </div> 
-  <br><br>
+            <div class="col-lg-10">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Current Train Schedule</h3>
+                    </div>
+                    <div class="panel-body">
+                        <div id="content">
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th>Train Name</th>
+                                        <th>Destination</th>
+                                        <th>Frequency (min)</th>
+                                        <th>Next Arrival</th>
+                                        <th>Minutes Away</th>
+                                        <th>Remove</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="tableContent">
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br><br>
 
     <div class="input-container">
-    <div class="row">
-        <div class="col-lg-10">
-            <div class="card bg-dark mb-3">
-                <h5 class="card-header black-header">Add Train</h5>
-                <div class="card-body">
-                        <form role="form">
+        <div class="row">
+            <div class="col-lg-10">
+                <div class="card bg-dark mb-3">
+                    <h5 class="card-header black-header">Add Train</h5>
+                    <div class="card-body">
+                        <form id="formID">
                             <div class="form-group">
                                 <label for="text">Train Name</label>
-                                <input type="text" class="form-control" id="name-input">
+                                <input type="text" class="form-control" id="trainName">
                             </div>
                             <div class="form-group">
                                 <label for="text">Destination</label>
-                                <input type="text" class="form-control" id="destination-input">
+                                <input type="text" class="form-control" id="trainDestination">
                             </div>
                             <div class="form-group">
                                 <label for="text">First Train Time (HH:mm - military time)</label>
-                                <input type="text" class="form-control" id="first-train-time-input">
+                                <input type="text" class="form-control" id="firstTrainTime">
                             </div>
                             <div class="form-group">
                                 <label for="comment">Frequency (min)</label>
-                                <input type="text" class="form-control" id="frequency-input">
+                                <input type="number" class="form-control" id="frequency">
                             </div>
-                            <button type="submit" class="btn btn-primary" id="add-train">Submit</button>
+                            <button type="submit" class="btn btn-primary" id="submit">Submit</button>
                         </form>
                     </div>
                 </div>
